--- a/src/resources/views/layouts/main.ejs
+++ b/src/resources/views/layouts/main.ejs
@@ -38,17 +38,143 @@
                     }
                 });
 
+                function convertDate(date) {
+                    const updateDate = new Date(date);
+                    const milliseconds = Date.now() - updateDate.getTime();
+                    const oneDay = 1000 * 3600 * 24;
+                    const oneHours = 1000 * 3600;
+                    const oneMinute = 1000 * 60; 
+                    if (milliseconds > oneDay) {
+                        return `${Math.floor(milliseconds/oneDay)} days ago`;
+                    } else if(milliseconds > oneHours) {
+                        return `${Math.floor(milliseconds/oneHours)} hours ago`;
+                    } else {
+                        return `${Math.floor(milliseconds/oneMinute)} minutes ago`;
+                    }
+                }
+
+                function renderRely(replies) {
+                    var html = '';
+                    if (replies.length > 0) {
+                        replies.forEach((reply) => {
+                            html += `   <div class="ps-3 pe-3 pt-2">
+                                            <div class="media-body border-bottom border-secondary">
+                                                
+                                                    <span class="h5 text-primary">Tác giả</span>
+                                                
+                                                <p class="mt-3 ms-2">
+                                                    <span class="text-success">${reply.title}</span>: ${reply.content}
+                                                </p>
+                                                <div class="ms-4">
+                                                    <p>
+                                                        <button class="btn btn-light btn-get-reply" data-id="${reply.id}" type="button" data-bs-toggle="collapse" data-bs-target="#comment-${reply.id}" aria-expanded="false" aria-controls="comment-${reply.id}">
+                                                            Xem thêm phản hồi
+                                                        </button>
+                                                    </p>
+                                                    <div class="collapse" id="comment-${reply.id}">
+                                                        <div id="reply-of-${reply.id}"></div>
+                                                    </div>
+                                                </div>`;
+
+                            html +=         `   <div class="ps-3 pe-3 pt-3 pb-3">
+                                                    <button type="button" <% if (currentUser) { %>
+                                                        class="btn btn-primary" <% } else { %> class="btn btn-primary disabled" <% } %>
+                                                        data-bs-toggle="modal" data-bs-target="#create-reply-${reply.id}" >
+                                                        <i class="fa-sharp fa-solid fa-circle-star"></i>
+                                                        Viết đánh giá
+                                                    </button>
+
+                                                    <div class="mt-1">
+                                                        <i>
+                                                            <small>
+                                                                (<i class="fa-regular fa-asterisk"></i>) Vui lòng đăng nhập để đánh giá bài viết
+                                                            </small>
+                                                        </i>
+                                                    </div>
+                                                </div>`;        
+
+                            html +=         `   <p class="ms-2">
+                                                    <i class="fa-solid fa-clock"></i> 
+                                                    <small> ${convertDate(reply.updated_at)} </small>
+                                                </p>
+                                            </div>
+                                        </div>`;
+                            
+                            html += `   <div class="modal fade" id="create-reply-${reply.id}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <form action="/comment/store/reply" method="post">
+                                                    <input type="hidden" name="parentId" value="${reply.id}">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Đánh giá bài viết</h1>
+                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div class="mb-3">
+                                                                <label for="titleReview" class="form-label">Tiêu đề</label>
+                                                                <input
+                                                                    type="text"
+                                                                    class="form-control"
+                                                                    id="titleReview"
+                                                                    name="title"
+                                                                    placeholder="Mời nhập tiêu đề"
+                                                                />
+                                                            </div>
+                                                            <div class="form-floating">
+                                                                <textarea
+                                                                    class="form-control"
+                                                                    placeholder="Leave a comment here"
+                                                                    name="content"
+                                                                    id="content"
+                                                                    style="height: 100px"
+                                                                ></textarea>
+                                                                <label for="content">Đánh giá</label>
+                                                            </div>
+            
+                                                            <input type="hidden" name="postId" value="${reply.post_id}">
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                                                            <button type="submit" name="review" class="btn btn-success">Gửi</button>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>`;
+                        });
+                        
+                    } else {
+                        html = `<div class="text-secondary h6">Chưa có bình luận nào</div>`;
+                        html += `   <div class="ps-3 pe-3 pt-3 pb-3">
+                                    <button type="button" <% if (currentUser) { %>
+                                        class="btn btn-primary" <% } else { %> class="btn btn-primary disabled" <% } %>
+                                        data-bs-toggle="modal" data-bs-target="#create-post-form" >
+                                        <i class="fa-sharp fa-solid fa-circle-star"></i>
+                                        Viết đánh giá
+                                    </button>
+
+                                    <div class="mt-1">
+                                        <i>
+                                            <small>
+                                                (<i class="fa-regular fa-asterisk"></i>) Vui lòng đăng nhập để đánh giá bài viết
+                                            </small>
+                                        </i>
+                                    </div>
+                                </div>`;
+                    }
+                    return html
+                }
+
                 $(".btn-get-reply").click(function(e) {
-                    console.log($(this));
                     e.preventDefault();
+                    console.log($(this))
                     const id = $(this).attr('data-id');
-                    console.log(id);
                     $.ajax({
-                        url: `  /comment/api/replies/${id}`,
+                        url: `/comment/api/replies/${id}`,
                         method: 'GET',
                         success: function(res) {
-                            console.log(res.replies);
-                            
+                        const html = renderRely(res.replies);
+                        $(`#reply-of-${id}`).html(html);
                         }, 
                         error: function(message) {
                             console.log(message.responseJSON)
