--- a/src/resources/views/posts/show.ejs
+++ b/src/resources/views/posts/show.ejs
@@ -56,19 +56,33 @@
                                     <p class="mt-3 ms-2">
                                         <span class="text-success"><%= comment.title %></span>: <%= comment.content%>
                                     </p>
-                                    <div>
+                                    <div class="ms-4">
                                         <p>
                                             <button class="btn btn-light btn-get-reply" data-id="<%= comment.id %>" type="button" data-bs-toggle="collapse" data-bs-target="#comment-<%= comment.id %>" aria-expanded="false" aria-controls="comment-<%= comment.id %>">
                                                 Xem thêm phản hồi
                                             </button>
                                         </p>
                                         <div class="collapse" id="comment-<%= comment.id %>">
-                                            <div class="card card-body">
-                                                Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-                                            </div>
+                                            <div class="card card-body" id="reply-of-<%= comment.id %>"></div>
                                         </div>
                                     </div>
                                     <p class="ms-2">
+                                        <div class="ps-3 pe-3 pt-3 pb-3">
+                                            <button type="button" <% if (currentUser) { %>
+                                                class="btn btn-primary" <% } else { %> class="btn btn-primary disabled" <% } %>
+                                                data-bs-toggle="modal" data-bs-target="#create-reply-<%= comment.id %>" >
+                                                <i class="fa-sharp fa-solid fa-circle-star"></i>
+                                                Viết đánh giá
+                                            </button>
+                    
+                                            <div class="mt-1">
+                                                <i>
+                                                    <small>
+                                                        (<i class="fa-regular fa-asterisk"></i>) Vui lòng đăng nhập để đánh giá bài viết
+                                                    </small>
+                                                </i>
+                                            </div>
+                                        </div>
                                         <i class="fa-solid fa-clock"></i> 
                                         <small> <%= differenceDates(comment.updated_at)%> </small>
                                         <% if (currentUser && comment.user_id === currentUser.id) { %>
@@ -86,11 +100,55 @@
                                     </p>
                                 </div>
                             </div>
-                            <!-- update comment form -->
-                            <% if (currentUser && comment.user_id === currentUser.id) { %>
-                                <div class="modal fade" id="update-post-form-<%= comment.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <% if (currentUser) { %>
+                                <% if (comment.user_id === currentUser.id) { %>
+                                    <!-- update comment form -->
+                                    <div class="modal fade" id="update-post-form-<%= comment.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <form action="/comment/<%= comment.id %>?_method=PUT" method="post">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Đánh giá bài viết</h1>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <div class="mb-3">
+                                                            <label for="titleReview" class="form-label">Tiêu đề</label>
+                                                            <input type="hidden" name="commentId" value="<%= comment.id%>">
+                                                            <input
+                                                                type="text"
+                                                                class="form-control"
+                                                                id="titleReview"
+                                                                name="title"
+                                                                placeholder="Mời nhập tiêu đề"
+                                                                value=<%= comment.title %>
+                                                            />
+                                                        </div>
+                                                        <div class="form-floating">
+                                                            <textarea
+                                                                class="form-control"
+                                                                placeholder="Leave a comment here"
+                                                                name="content"
+                                                                id="content"
+                                                                style="height: 100px"
+                                                            ><%= comment.content %></textarea>
+                                                            <label for="content">Đánh giá</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                                                        <button type="submit" name="review" class="btn btn-success">Gửi</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                <% } %>
+                                <!-- modal reply form -->
+                                <div class="modal fade" id="create-reply-<%= comment.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
-                                        <form action="/comment/<%= comment.id %>?_method=PUT" method="post">
+                                        <form action="/comment/store/reply" method="post">
+                                            <input type="hidden" name="parentId" value="<%= comment.id %>">
                                             <div class="modal-content">
                                                 <div class="modal-header">
                                                     <h1 class="modal-title fs-5" id="exampleModalLabel">Đánh giá bài viết</h1>
@@ -99,14 +157,12 @@
                                                 <div class="modal-body">
                                                     <div class="mb-3">
                                                         <label for="titleReview" class="form-label">Tiêu đề</label>
-                                                        <input type="hidden" name="commentId" value="<%= comment.id%>">
                                                         <input
                                                             type="text"
                                                             class="form-control"
                                                             id="titleReview"
                                                             name="title"
                                                             placeholder="Mời nhập tiêu đề"
-                                                            value=<%= comment.title %>
                                                         />
                                                     </div>
                                                     <div class="form-floating">
@@ -116,9 +172,11 @@
                                                             name="content"
                                                             id="content"
                                                             style="height: 100px"
-                                                        ><%= comment.content %></textarea>
+                                                        ></textarea>
                                                         <label for="content">Đánh giá</label>
                                                     </div>
+    
+                                                    <input type="hidden" name="postId" value="<%= post.id%>">
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
